--- a/style.css
+++ b/style.css
@@ -470,3 +470,33 @@ nav a button:hover{
   text-decoration-color:    var(--primary-color);
   text-align: center;
 }
+
+@media only screen and (max-width: 769px) {
+    nav{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .gridrow2{
+        display: flex;
+        flex-direction: column;
+    }
+    .form-container{
+        justify-content: center;
+        align-items: center;
+    }
+    .form-container input[type="submit"] {
+        margin-left: 0;
+    }
+    h1 {
+        font-size: 2em;
+    }
+    
+    h2 {
+        font-size: 1.3em;
+    }
+    button{
+        font-size: 1.3em;
+    }
+
+}
+
