--- a/style.css
+++ b/style.css
@@ -527,32 +527,67 @@ button.active {
   text-align: center;
 }
 
-@media only screen and (max-width: 769px) {
-    nav{
-        flex-direction: column;
-        gap: 20px;
-    }
-    .gridrow2{
-        display: flex;
-        flex-direction: column;
-    }
-    .form-container{
-        justify-content: center;
-        align-items: center;
-    }
-    .form-container input[type="submit"] {
-        margin-left: 0;
-    }
-    h1 {
-        font-size: 2em;
-    }
-    
-    h2 {
-        font-size: 1.3em;
-    }
-    button{
-        font-size: 1.3em;
-    }
-
+/* SEARCH */
+.search-button{
+  background-color: #24180a;
+  color: #ffc24d;
+  border-radius:20px;
+}
+.search-container {
+  position: relative;
+  display: inline-block;
 }
 
+.search-input {
+  padding: 10px 20px;
+  border-radius: 20px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+  width: 250px;
+  height: 40px;
+  box-sizing: border-box;
+  transition: border 0.3s;
+}
+
+.search-input:focus {
+  border-color: #4CAF50;
+  outline: none;
+}
+
+
+@media only screen and (max-width: 1200px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .search-container {
+    margin-top: 10px;
+  }
+
+  .search-container form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .search-container input {
+    width: auto;
+  }
+
+  button.active {
+    text-decoration: underline;
+  }
+  h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 1.3em;
+}
+button{
+    font-size: 1.3em;
+}
+
+}
